Added custom markers

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -103,7 +103,7 @@ h2 {
     margin-top: 10em;
   }
   
-  .cta:hover {background-color: #fdd835}
+  .cta:hover {background-color: #534853}
   
   .cta:active {
     background-color: #fdd835;
