--- a/css/main.css
+++ b/css/main.css
@@ -4,10 +4,25 @@ html, body {
     margin: 0;
 }
 
+body{
+    position: relative;
+}
+
+
 #map-container {   
-    position: absolute;
+    position: relative;
     height:92%;
-    /* top: 1em;
-    bottom: 0; */
     width: 100%; 
+}
+
+.timepicker-digital-display{
+    background-color: #fdd835;
+}
+
+timepicker-tick:hover { background: #fdd835 !important; }
+.timepicker-canvas line { stroke: #fdd835 !important; }
+.timepicker-canvas-bearing { fill: #fdd835 !important; }
+.timepicker-canvas-bg { fill: #fdd835 !important; }
+.timepicker-close{
+    color: #fdd835;
 }
